--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -126,10 +126,14 @@
     position: absolute;
     margin-left: 8.1%;
     padding-left: 0 !important;
-    top: 44px;
+    top: 28px;
     width: 10%;
     background: white ;
     color: black;
+}
+
+#childmenue1{
+    top: 42px;
 }
 
 .childmenuelinks{
