--- a/src/pages/Servicepages/Socialdigitalmedia/Socialdigitalmedia.scoped.css
+++ b/src/pages/Servicepages/Socialdigitalmedia/Socialdigitalmedia.scoped.css
@@ -2,6 +2,10 @@
   min-height: 1028px;
 }
 
+.headerimage{
+  height: 771px;
+}
+
 .u-section-1 .u-group-1 {
   min-height: 259px;
   margin-top: 50px;
