--- a/src/pages/Spantanic/Spantanic.scss
+++ b/src/pages/Spantanic/Spantanic.scss
@@ -62,7 +62,12 @@
 @media (max-width : 680px) {
        
 .spantanicbanner {
+    height: 581px !important;
     padding-top: 33%;  
+}
+
+.spantiktext {
+    FONT-SIZE: 68px !important;
 }
 
 .videosectionspantanic {
