--- a/src/pages/services/services.scss
+++ b/src/pages/services/services.scss
@@ -3,6 +3,12 @@
     height: 268px;
     margin-top: 8%;
 }
+
+.serviceheadingimage {
+    height:751px !important ;
+    margin-top: 3.18% !important;
+}
+
 .aboutheading h2{
     color: var(--primary);
 }
