--- a/src/pages/Servicepages/Printingpackaging/BUSINESSPRODUCTS/BUSINESSPRODUCTS.scoped.css
+++ b/src/pages/Servicepages/Printingpackaging/BUSINESSPRODUCTS/BUSINESSPRODUCTS.scoped.css
@@ -36,7 +36,7 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 0 auto 0 0;
+  margin: 0 auto 0;
 }
 
 .u-section-1 .u-image-1 {
@@ -53,7 +53,7 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 0 auto 0 0;
+  margin: 0 auto 0;
 }
 
 .u-section-1 .u-image-2 {
@@ -72,7 +72,7 @@
 }
 
 .u-section-1 .u-text-5 {
-  margin: 0 auto 0 0;
+  margin: 0 auto 0;
 }
 
 .u-section-1 .u-image-3 {
@@ -91,7 +91,7 @@
 }
 
 .u-section-1 .u-text-6 {
-  margin: 0 auto 0 0;
+  margin: 0 auto 0;
 }
 
 .u-section-1 .u-image-4 {
