--- a/src/pages/Servicepages/Printingpackaging/Printingpackages.scoped.css
+++ b/src/pages/Servicepages/Printingpackaging/Printingpackages.scoped.css
@@ -53,15 +53,71 @@
   margin: 0 auto 0 0;
 }
 
+
+.outercircle{
+  border: 0.1px solid #0000002b;
+  height: 390px;
+  width: 73%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12%;
+  border-radius: 50%;
+}
+
+
+.icon1{
+  height: 58px;
+  position: relative;
+  bottom: 417px;
+  left: 245px;
+}
+.icon2{
+  height: 58px;
+  position: relative;
+  bottom: 403px;
+  left: 453px;
+}
+.icon3{
+  height: 58px;
+  position: relative;
+  bottom: 288px;
+  left: 47px;
+}
+.icon4{
+  height: 58px;
+  position: relative;
+  bottom: 152px;
+  left: 245px;
+}
+
+.insidetext{
+  color: white;
+  padding: 36px;
+  text-align: center;
+  padding-top: 63px;
+}
+
+
+.innercirclle{
+  background-color: #71b0f7;
+  border: 10px solid #4195f7;
+  height: 268px;
+  width: 71%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15%;
+  border-radius: 50%;
+}
+
 .u-section-1 .u-container-layout-3 {
   padding: 30px 0;
 }
 
 .u-section-1 .u-group-4 {
   min-height: 566px;
-  width: 449px;
+  width: 550px;
   height: auto;
-  margin: 0 -91px 0 auto;
+  margin: 0 -254px 0 auto;
 }
 
 .u-section-1 .u-container-layout-4 {
@@ -560,5 +616,57 @@
   .u-section-1 .u-text-14{
     margin-left: 0px;
   }
+
+  .outercircle{
+    border: 0.1px solid #0000002b;
+    height: 307px;
+    width: 89%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 12%;
+    border-radius: 50%;
+  }
+
+  .innercirclle {
+    background-color: #71b0f7;
+    border: 10px solid #4195f7;
+    height: 244px;
+    width: 81%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    border-radius: 50%;
+  }
+
+  .icon1{
+    height: 38px  ;
+    bottom: 326px  ;
+    left: 155px  ;
+  }
+
+  .icon3{
+    height: 38px  ;
+    position: relative;
+    bottom: 223px  ;
+    left: 5px  ;
+  }
+
+  .icon4{
+    height: 38px  ;
+    position: relative;
+    bottom: 97px  ;
+    left: 161px  ;
+  }
   
+  .icon2 {
+    height: 38px  ;
+    position: relative;
+    bottom: 290px  ;
+    left: 299px  ;
+  }
+  
+  .animatedicons {
+    right: 152px;
+  }
+
 }
